Rearranges the tile I/O of the ship to be in one place